@@ -11,6 +11,7 @@ Bug fixes:
   with any mode.
 - Fixed HTML errors in Boolean Widget render method (invalid id, invalid label
   in edit mode)
+- Fixed error when saving changes on layout properties in the ZMI.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
